welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:3: error: ')' expected but '}' found.
	else (return false}
                          ^icyHot:6: error: Unmatched closing brace '}' ignored here
 }
 ^